fixing alignment again

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ nav{
 	width: 100%;
 	height: 50px;
 	background-color: #CCC;
-	text-align: center-bottom;
+	text-align: center;
+	vertical-align: bottom;
 	
 }
 
